--- a/index.html
+++ b/index.html
@@ -9,19 +9,27 @@
     </head>
     <body>
         <div class="form-control">
-            <nav>
-                <ul>
-                    <li>
-                        <a></a>
-                    </li>
-                    <li>
-                        <a></a>
-                    </li>
-                    <li>
-                        <a></a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="header-form-control">
+                <header></header>
+            </div>
+            <div class="nav-form-control">
+                <nav>
+                    <ul>
+                        <li>
+                            <a></a>
+                        </li>
+                        <li>
+                            <a></a>
+                        </li>
+                        <li>
+                            <a></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="section-form-control">
+                <section class="section-1"></section>
+            </div>
         </div>
         <script ></script>
     </body>
