--- a/index.html
+++ b/index.html
@@ -16,19 +16,31 @@
                 <nav>
                     <ul>
                         <li>
-                            <a></a>
+                            <a>Section 1</a>
                         </li>
                         <li>
-                            <a></a>
+                            <a>Section 2</a>
                         </li>
                         <li>
-                            <a></a>
+                            <a>Section 3</a>
+                        </li>
+                        <li>
+                            <a>Section 4</a>
+                        </li>
+                        <li>
+                            <a>Footer</a>
                         </li>
                     </ul>
                 </nav>
             </div>
             <div class="section-form-control">
                 <section class="section-1"></section>
+                <section class="section-2"></section>
+                <section class="section-3"></section>
+                <section class="section-4"></section>
+            </div>
+            <div class="footer-form-control">
+                <footer></footer>
             </div>
         </div>
         <script ></script>
