--- a/index.html
+++ b/index.html
@@ -1,48 +1,77 @@
-!DOCTYPE html
-<html>
-    <head>
-        <meta />
-        <meta />
-        <meta />
-        <link type="styles/css" />
-        <title>Default</title>
-    </head>
-    <body>
-        <div class="form-control">
-            <div class="header-form-control">
-                <header></header>
-            </div>
-            <div class="nav-form-control">
-                <nav>
-                    <ul>
-                        <li>
-                            <a>Section 1</a>
-                        </li>
-                        <li>
-                            <a>Section 2</a>
-                        </li>
-                        <li>
-                            <a>Section 3</a>
-                        </li>
-                        <li>
-                            <a>Section 4</a>
-                        </li>
-                        <li>
-                            <a>Footer</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="section-form-control">
-                <section class="section-1"></section>
-                <section class="section-2"></section>
-                <section class="section-3"></section>
-                <section class="section-4"></section>
-            </div>
-            <div class="footer-form-control">
-                <footer></footer>
-            </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=icon>
+    <link href="main.css"  rel="sylesheet" type="text/css">
+    <title>Endless Barter</title>
+</head>
+<body>
+    <div class="form-control">
+        <div class="header-form-control">
+            <header id="top-container" class="top-container">
+                <table class="header-container">
+                    <tbody>
+                        <tr>
+                            <td class="td-container">
+                                <h1 id="td-h1">
+                                    <a id="td-a" href="https://endlessbarter.com/">
+                                        <img id="td-logo" src="" alt="" width="250" height="200">
+                                    </a>
+                                </h1>
+                            </td>
+                            <td class="td-container"></td>
+                            <td class="td-container"></td>
+                            <td class="td-container-s">
+                                <form method="get" action="https://endlessbarter.com/products/">
+                                    <table class="tbl-12" role="presentation">
+                                        <tbody>
+                                            <tr>
+                                                <td class="td-container-s">
+                                                    <div id="header-search-box">
+                                                        <div id="header-searc-box2">
+                                                            <label class="ar-hdn" for="gh-ac">Enter your search keyword</label>
+                                                            <input type="text" id="gh-ac" class="gh-tb ui-autocomplete-input" type="text" aria-autocomplete="list" aria-expanded="false" size="50" maxlength="300" aria-label="Search for a product" placeholder="Search for a product" name="_nkw" autocapitalize="none" autocorrect="off" spellcheck="false" autocomplete="off" aria-haspopup="true" role="combobox" aria-owns="ui-id-1">
+                                                            <span class="ui-helper-hidden-accessible" role="status" aria-live="polite"></span>
+                                                            <input style="display:none">
+                                                            <script>
+                                                                if(document.getElementById('gh-ac').value.length !== 0){
+                                                                    document.getElementById('header-search-box').classList.add('gh-ac-box-focus');
+                                                                    document.getElementById('gh').classList.add('gh-sch-focus');
+                                                                }
+                                                            </script>
+                                                        </div>
+                                                    </div>
+                                                    <div id="search"></div>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <img id="logo" href="">
+                <h2>Search For Products</h2>
+            </header>
         </div>
-        <script ></script>
-    </body>
+        <div class="nav-form-control">
+            <nav id="">
+                <ul class="nav-container">
+                    <li><a href="#"></a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="section-form-control">
+            <section id=""></section>
+        </div>
+        <div class="footer-form-control">
+            <footer id=""></footer>
+        </div>
+    </div>
+    <script src="main.js" type="text/javascript"></script>
+</body>
 </html>
